# RPI_mini_VMS_server

./: CMakeLists.txt  README.md  data.qrc  gstthread.cpp  main.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
include/: device.h  devicemanager.h  deviceregisterdialog.h  displaywidget.h  gstthread.h  mainwidget.h  savedvideolist.h  videolistdialog.h
source/: device.cpp  devicemanager.cpp  deviceregisterdialog.cpp  displaywidget.cpp  gstthread.cpp  mainwidget.cpp  savedvideolist.cpp  videolistdialog.cpp
ui/: deviceregisterdialog.ui  mainwidget.ui  savedvideolist.ui  videolistdialog.ui
